Ecommerce/src/main/java/com/example/ecommerce/errors/ClientNotFoundException.java
package com.example.ecommerce.errors;

public class ClientNotFoundException extends RuntimeException {
    public ClientNotFoundException(String message) {
        super(message);
    }
}
